Revision history for perl distribution Convos

0.99_06 Not Released
 - Fix tracking participants
 - Fix joining channel with key in backend #268
 - Fix joining channel with key in <convos-create-dialog/> #267
 - Fix handling "part" events
 - Fix starting "script/convos dev" after "script/convos install --develop"
 - Add Mojo::IRC 0.33 as required module #267
 - Add IO::Socket::SSL as required module
   * Required to connect to TLS networks
   * Required to fetch meta data from https resources
 - Change calculation of dialog.unread to server side
 - Change WebSocket keep-alive interval
 - Change "Join dialog" will be shown after a new connection is created
 - Change <convos-message-enable-notifications/> buttons to be disabled on click
 - Change autocomplete is off in input fields

0.99_05 2016-08-22T16:30:57+0200
 - Fix breaking long words inside a message template
 - Fix only show nick change in the channels where the nick is active
 - Fix goto anything
 - Fix reading unicode (æøå) back from file
 - Fix dialog.frozen after webscocket comes back online
 - Fix skip installing dev deps by default
 - Fix handling of config file values
 - Fix "send" button in <convos-input/>
 - Fix missing Time::Piece on redhat #266
 - Add fetching connections, dialogs and notifications together with user object
 - Add icon to indicate that the WebSocket is down
 - Add last_read() to Convos::Core::Dialog
 - Add sorting of dialogs by lastRead
 - Add support for "forced_irc_server"
 - Add clicking on a notitication takes you to the dialog
 - Bundled cpanm, used by "script/convos install" (less dependencies)
 - Change client to keep WebSocket alive instead of backend
 - Converted Swagger2 to OpenAPI
 - Converted jQuery dependencies to Vue components
 - Converted Guides to gh-pages branch - http://convos.by/doc

0.99_04 2016-08-15T16:33:45+0200
 - Fix Could not send "\nsome message": Unable to construct PRIVMSG.
 - Fix remove dialogs when connection is deleted
 - Add search for dialogs