@@ -6,6 +6,7 @@ Revision history for perl distribution Convos
  - Fix joining channel with key in <convos-create-dialog/> #267
  - Fix handling "part" events
  - Fix starting "script/convos dev" after "script/convos install --develop"
+ - Fix running test suite with "script/convos test"
  - Add Mojo::IRC 0.33 as required module #267
  - Add IO::Socket::SSL as required module
    * Required to connect to TLS networks
